--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Quiz!</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+      <header id="page-head">
+          <div id="high-scores">View High Scores!</div>
+          <div id="timer">Time Left:</div>
+      </header>
+      <section class="quiz-container">
+          <div id="question-container" class="hidden"></div>
+            <div id="question">Question?</div>
+                <button class="button">Answer 1</button>
+                <button class="button">Answer 2</button>
+                <button class="button">Answer 3</button>
+                <button class="button">Answer 4</button>
+      </section>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
