Added starter CSS styles and new quiz html file

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>Quiz!</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-      <header id="page-head">
-          <div id="high-scores">View High Scores!</div>
-          <div id="timer">Time Left:</div>
-      </header>
-      <section class="quiz-container">
-          <div id="question-container" class="hidden"></div>
-            <div id="question">Question?</div>
-                <button class="button">Answer 1</button>
-                <button class="button">Answer 2</button>
-                <button class="button">Answer 3</button>
-                <button class="button">Answer 4</button>
+    <header class="page-header">
+      <a href="">View high scores</a>
+      <span></span>
+    </header>
+      <section class="container">
+        <h1>Coding Quiz Challenge</h1>
+        <p id="description paragraph">
+          Try to answer the following code-related questions within the time limit.
+          Keep in mind that incorrect answers will penalize your score/time by ten seconds! 
+        </p>
+        <button class="button">Start Quiz</button>
       </section>
-    <script src="./assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
