Added more functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="scores">
       <button id="high-scores-link" onclick="DisplayHighScores()">View high scores</button>
     </div>
-      <div id="time-left">Time Left: <span id="clock">0</span></div>
+      <div id="time-left" class="hidden">Time Left: <span id="clock">0</span></div>
       <section id="start-page" class="container">
         <h1 id="coding-quiz-title">Coding Quiz Challenge</h1>
         <p id="description-paragraph">
@@ -35,7 +35,6 @@
         <h1 id="results-title">All Done!</h1>
         <div id="display-final-score">Your final score is:</div>
         <span>Enter initials:</span>
-        <label for="initials"></label>
         <input 
         id="initials"
         type="text"
