--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <section id="results-page" class="container hidden">
         <h1 id="results-title">All Done!</h1>
-        <div id="display-final-score">Your final score is:</div>
+        <div>Your final score is: <span id="display-final-score"></span></div>
         <span>Enter initials:</span>
         <input 
         id="initials"
@@ -45,7 +45,9 @@
 
       <section id="high-score-page" class="container hidden">
         <h1 id="high-scores-title">High Scores</h1>
-          <div id="high-scores">placeholder</div>
+          <ul id="high-scores">
+            <li></li>
+          </ul>
           <button id="back-button" class="button">Go Back</button>
           <button id="clear-scores" class="button">Clear High Scores</button>
       </section>
